--- a/Jade-1-Teal/cinnamon/cinnamon.css
+++ b/Jade-1-Teal/cinnamon/cinnamon.css
@@ -14,17 +14,14 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 ************************************************************************** */
-stage {
-    font-family: Noto Sans, sans-serif;
-}
 
 .cinnamon-link {
-    color: #429b8b; /*+*/
+    color: #429b8b; /* coloraccent */
     text-decoration: underline;
 }
 
 .cinnamon-link:hover {
-    color: #429b8b; /*+*/
+    color: #429b8b; /* coloraccent */
 }
 
 .label-shadow {
@@ -43,35 +40,35 @@ StScrollView.vfade
 
 StScrollView StScrollBar
 {
-  min-width: 8px;
+  min-width: 5px;
   min-height: 16px;
 }
 
 
 StScrollBar StBin#trough {
-    background-color: rgba(0,0,0,0);
-    border: 1px solid #555555;
+    background-color: rgba(0,0,0,0.3);
+    border: none;
     border-radius: 4px;
 }
 
 StScrollBar StButton#vhandle
 {
-    background-color: rgba(90,90,90,1);
-    border: 1px solid rgba(90,90,90,1);
+    background-color: #888;
+    border: none;
     border-radius: 4px;
 }
 
 StScrollBar StButton#hhandle
 {
-    background-color: rgba(90,90,90,1);
-    border: 1px solid rgba(90,90,90,1);
+    background-color: #888;
+    border: 1px solid #888;
     border-radius: 4px;
 }
 
 StScrollBar StButton#hhandle:hover,
 StScrollBar StButton#vhandle:hover
 {
-    background-color: rgba(100,100,100,1);
+    background-color: #999;
 }
 
 #Tooltip {
@@ -256,14 +253,16 @@ StScrollBar StButton#vhandle:hover
 .popup-slider-menu-item {
     height: 1em;
     min-width: 15em;
-    color: white;
+    border-right-width: 5px;
+    border-left-width: 5px;
+    color: #207c6f;  /* coloraccent */
     -slider-height: 0.3em;
-    -slider-background-color: rgba(35,35,35,1);
-    -slider-border-color: rgba(0,0,0,1);
-    -slider-active-background-color: #207c6f; /*+*/
-    -slider-active-border-color: #207c6f; /*+*/
+    -slider-background-color:#000000;
+    -slider-border-color:#000000;
+    -slider-active-background-color: #207c6f; /* coloraccent */
+    -slider-active-border-color:transparent;
     -slider-border-width: 1px;
-    -slider-handle-radius: 0.5em;
+    -slider-handle-radius:6px;
 }
 
 .popup-device-menu-item {
@@ -1517,7 +1516,7 @@ StScrollBar StButton#vhandle:hover
 }
 
 .polkit-dialog-password-entry:focus {
-    border: 2px solid #10897c; /*+*/
+    border: 2px solid #10897c; /* coloraccent */
 }
 
 .polkit-dialog-password-entry .capslock-warning {
@@ -1804,13 +1803,15 @@ StScrollBar StButton#vhandle:hover
     border-radius: 4px;
     color: rgb(228, 228, 228);
     border: 1px solid rgba(100,100,100,1);
-    background-gradient-start: rgba(0,0,0,0.5);
-    background-gradient-end: rgba(40,40,40,0.5);
+    background-gradient-start: rgba(20,20,20,0.5);
+    background-gradient-end: rgba(20,20,20,0.5);
     background-gradient-direction: vertical;
     selected-color: black;
     caret-color: rgb(228, 228, 228);
     caret-size: 1px;
-    width: 400px;
+    height: 20px;
+    font-size: 10pt;
+    margin-bottom: 10px;
     transition-duration: 300;
 }
 
@@ -2028,7 +2029,7 @@ StScrollBar StButton#vhandle:hover
 
 .grouped-window-list-thumbnail-menu .item-box:outlined {
     padding: 8px;
-    border: 1px solid #207c6f; /*+*/ 
+    border: 1px solid #207c6f; /* coloraccent */ 
 }
 .grouped-window-list-thumbnail-menu .item-box:selected {
     color: #ffffff;
@@ -2095,8 +2096,8 @@ StScrollBar StButton#vhandle:hover
     -slider-height: 0.5em;
     -slider-background-color: #000000;
     -slider-border-color: rgba(0, 0, 0, 0);
-    -slider-active-background-color: #207c6f; /*+*/
-    -slider-active-border-color: #207c6f; /*+*/
+    -slider-active-background-color: #207c6f; /* coloraccent */
+    -slider-active-border-color: #207c6f; /* coloraccent */
     -slider-border-width: 0px;
     -slider-handle-radius: 0px;
 }
@@ -2315,7 +2316,7 @@ StScrollBar StButton#vhandle:hover
 .applet-box:checked,
 .applet-box:hover {
     color: #fff;
-    background-color: #207c6f; /*+*/
+    background-color: #207c6f; /* coloraccent */
 }
 
 .applet-box:highlight {
