--- a/Jade-1-Green/gtk-3.0/colours-dark.css
+++ b/Jade-1-Green/gtk-3.0/colours-dark.css
@@ -14,11 +14,11 @@
 @define-color    theme_unfocused_selected_bg_color     @theme_accent_color;
 
 /* sidebar colours */
-@define-color    sidebar_bg                            #384147;
-@define-color    sidebar_hovering                      #999999;
+@define-color    sidebar_bg                            #004638;
+@define-color    sidebar_hovering                      #5c6369;
 @define-color    sidebar_fg                            #ffffff;
 
-@define-color    theme_fg_color_sel                    #60b010;
+@define-color    theme_fg_color_sel                    #00CC66;
 
 /* view */
 @define-color    view_fg_sel                           #00541e;
@@ -26,8 +26,8 @@
 @define-color    view_bg_acceleditor                   #1c8952;
 
 /* entry */
-@define-color    entry_border_act                      #0b885a;
-@define-color    entry_border_act_shad                 #10995e;
+@define-color    entry_border_act                      #006249;
+@define-color    entry_border_act_shad                 #00993e;
 @define-color    entry_tag_a                           #00b95C;
 @define-color    entry_tag_b                           #00b657;
 @define-color    entry_tag_c                           #00b355;
@@ -46,15 +46,10 @@
 @define-color    button_bg_sugg_c_act                  #11b460;
 @define-color    button_bg_sugg_flt                    #209b5d;
 @define-color    button_border_sugg                    #005019;
-@define-color    button_fg_sugg_shadow                 #000000;
 
 /* progress bar */
 @define-color    prgbar_bg_a                           #1a9c5c;
 @define-color    prgbar_bg_b                           #1d8351;
-@define-color    prgbar_trough                         #969696;
-@define-color    prgbar_trough_a                       #eeeeee;
-@define-color    prgbar_trough_b                       #ffffff;
-@define-color    prgbar_border                         #606060;
 
 /* scale slider */
 @define-color    slider_bg_a                           @theme_accent_color;
@@ -83,74 +78,80 @@
 /* ****************************** C O M M O N   C O L O U R S *********************************** */
 
 /* text widgets and the like base background color */
-@define-color    theme_base_color                      #d5d5d5;
+@define-color    theme_base_color                      #384248;
 
-@define-color    box_shadow                            #ffffff;   
+@define-color    box_shadow                            #cccccc;   
 
 /* widget background color */
-@define-color    theme_bg_color                        #c9c9c9;
-@define-color    theme_bg_color_hov                    #b0b0b0;
+@define-color    theme_bg_color                        #30393f;
+@define-color    theme_bg_color_hov                    #50595c;
 @define-color    theme_bg_color_from                   #454c4c;
 @define-color    theme_bg_color_to                     #2d3232;
-@define-color    popover                               @theme_bg_color;
-@define-color    shadow_color                          #cccccc;
+@define-color    popover                               #384248;
+@define-color    shadow_color                          #000000;
 
 /* widget text/foreground color */
-@define-color    theme_fg_color                        #212121;
+@define-color    theme_fg_color                        #eeeeec;
 @define-color    theme_text_color                      @theme_fg_color;
-@define-color    theme_fg_color_sub                    #909090;
+@define-color    theme_fg_color_sub                    #666C6F;
 @define-color    theme_fg_color_dis                    #858786;
 
-@define-color    inline_bg                             #dedede;
+@define-color    inline_bg                             #384248;
 
 /* sidebar colours */
-@define-color    assistant_sidebar_bg                  #3e4243;
-@define-color    assistant_sidebar_bg_lbl              #5fa24a;
-@define-color    assistant_sidebar_fg                  #ffffff;
+@define-color    assistant_sidebar_bg                  #252a2c;
+@define-color    assistant_sidebar_bg_lbl              #585d5e;
+@define-color    assistant_sidebar_fg                  #cccccc;
 
 /* view */
-@define-color    view_bg                               #f3f3f3;
-@define-color    view_bg_hover                         #e0e0e0;
-@define-color    view_fg                               #212121;
+@define-color    view_bg                               #202a2f; /*2f3738*/
+@define-color    view_bg_hover                         #ffffff;
+@define-color    view_fg                               #bdbebf;
 @define-color    view_fg_dis                           #566164;
-@define-color    view_fg_hov                           #212121;
-@define-color    view_border                           #969696;
-@define-color    view_hdr_border                       #c5c5c5;
+@define-color    view_fg_hov                           #bccee1;
+@define-color    view_border                           #2b3032;
+@define-color    view_hdr_border                       #373e40;
 
 @define-color    tooltip_fg                            #f7f7f7;
 
-@define-color    separator                             #969696;
+@define-color    separator                             #1b1f20;
 @define-color    header_separator                      #1b1f20;
-@define-color    notebook_separator                    #969696;
-@define-color    border_box                            #969696;
+@define-color    notebook_separator                    #1b1f20;
+@define-color    border_box                            #1b1f20;
+
+/* progress bar */
+@define-color    prgbar_trough                         #101010;
+@define-color    prgbar_trough_a                       #131313;
+@define-color    prgbar_trough_b                       #191919;
+@define-color    prgbar_border                         #263336;
 
 /* entry */
-@define-color    entry_fg_color                        #212121;
+@define-color    entry_fg_color                        #ffffff;
 @define-color    entry_fg_dis                          #858786;
-@define-color    entry_bg_a                            #e0e0e0;
-@define-color    entry_bg_b                            #e6e6e6;
-@define-color    entry_bg_c                            #f5f5f5;
+@define-color    entry_bg_a                            #445053;
+@define-color    entry_bg_b                            #475157;
+@define-color    entry_bg_c                            #495259;
 @define-color    entry_bg_under_a                      #FFFFFF;
 @define-color    entry_bg_under_b                      #000000;
 @define-color    entry_bg_shadow                       @shadow_color;
-@define-color    entry_border                          #a0a0a0;
-@define-color    entry_border_dis                      #a0a0a0;
+@define-color    entry_border                          #0a0a0a;
+@define-color    entry_border_dis                      #0a0a0a;
 
 @define-color    titleentry_fg_color                   #ffffff;
 @define-color    titleentry_fg_dis                     #858786;
-@define-color    titleentry_bg_a                       #505a5f;
-@define-color    titleentry_bg_b                       #546063;
-@define-color    titleentry_bg_c                       #596269;
+@define-color    titleentry_bg_a                       #555758;
+@define-color    titleentry_bg_b                       #575a5b;
+@define-color    titleentry_bg_c                       #606566;
 @define-color    titleentry_bg_under_a                 #FFFFFF;
 @define-color    titleentry_bg_under_b                 #000000;
-@define-color    titleentry_bg_shadow                  #000000;
+@define-color    titleentry_bg_shadow                  @shadow_color;
 @define-color    titleentry_border                     #0a0a0a;
 @define-color    titleentry_border_dis                 #0a0a0a;
 
-@define-color    entry_border_err                      #ff7f7f;
-@define-color    entry_bg_err_a                        #ed4848;
-@define-color    entry_bg_err_b                        #e84a4a;
-@define-color    entry_bg_err_c                        #e44242;
+@define-color    entry_border_err                      #1a0000;
+@define-color    entry_bg_err_a                        #490000;
+@define-color    entry_bg_err_b                        #4c0000;
+@define-color    entry_bg_err_c                        #4F0000;
 @define-color    entry_fg_err                          #ffffff;
 
 
@@ -163,24 +164,26 @@
 @define-color    pathbar_bdr                           #222222;
 
 /* buttons */
-@define-color    button_fg_color                       #363636;
+@define-color    button_fg_color                       #ffffff;
 @define-color    button_fg_osd                         #cccccc;
 @define-color    button_fg_osd_dis                     #666666;
 @define-color    button_fg_shadow                      @shadow_color;
-@define-color    button_fg_dis                         #909090;
-@define-color    button_bg_a                           #f7f7f7;
-@define-color    button_bg_b                           #e9e9e9;
-@define-color    button_bg_c                           #cecece;
-@define-color    button_bg_a_hov                       #ffffff;
-@define-color    button_bg_b_hov                       #efefef;
-@define-color    button_bg_c_hov                       #cecece;
-@define-color    button_bg_a_act                       #8f8f8f;
-@define-color    button_bg_b_act                       #a1a1a1;
-@define-color    button_bg_c_act                       #aaaaaa;
-@define-color    button_border                         #a9a9a9;
+@define-color    button_fg_dis                         #566164;
+@define-color    button_bg_a                           #263036;
+@define-color    button_bg_b                           #262c33;
+@define-color    button_bg_c                           #191f23;
+@define-color    button_bg_a_hov                       #3c464c;
+@define-color    button_bg_b_hov                       #30363c;
+@define-color    button_bg_c_hov                       #191f23;
+@define-color    button_bg_a_act                       #0f1313;
+@define-color    button_bg_b_act                       #151919;
+@define-color    button_bg_c_act                       #1a1f22;
+@define-color    button_bg_a_dis                       #232c33;
+@define-color    button_bg_a_bkdrp                     #232628;
+@define-color    button_border                         #0a0a0a;
 
 @define-color    titlebutton_fg_color                  #ffffff;
-@define-color    titlebutton_fg_shadow                 #000000;
+@define-color    titlebutton_fg_shadow                 @shadow_color;
 @define-color    titlebutton_fg_dis                    #566164;
 @define-color    titlebutton_flat_bg                   #5b6464;
 @define-color    titlebutton_bg_a                      #263036;
@@ -192,7 +195,7 @@
 @define-color    titlebutton_bg_a_act                  #0f1313;
 @define-color    titlebutton_bg_b_act                  #151919;
 @define-color    titlebutton_bg_c_act                  #191f23;
-@define-color    titlebutton_bg_a_dis                  #303639;
+@define-color    titlebutton_bg_a_dis                  #232628;
 @define-color    titlebutton_border                    #0a0a0a;
 
 @define-color    button_fg_dest_color                  #f7f7f7;
@@ -208,23 +211,20 @@
 @define-color    button_bg_dest_flt                    #d51010;
 @define-color    button_border_dest                    #560000;
 
-@define-color    button_bg_dis_a                       #DCDCDC;
-@define-color    button_bg_dis_b                       #e9e9e9;
-
-@define-color    button_bgcirc_a_hov                   #f6f6f6;
-@define-color    button_bgcirc_b_hov                   #d8d8d8;
-@define-color    button_bgcirc_c_hov                   #cecece;
+@define-color    button_bg_dis_a                       #2f3333;
+@define-color    button_bg_dis_b                       #2d343a;
 
 @define-color    button_fgcirc_shadow                  @shadow_color;
-@define-color    button_bgcirc_a                       #ececec;
-@define-color    button_bgcirc_b                       #d8d8d8;
-@define-color    button_bgcirc_c                       #cecece;
-@define-color    button_bgcirc_flt_a                   #969696;
-@define-color    button_bgcirc_flt_b                   #969696;
+@define-color    button_bgcirc_a                       #263036;
+@define-color    button_bgcirc_b                       #262c33;
+@define-color    button_bgcirc_c                       #191f23;
+@define-color    button_bgcirc_a_hov                   #3c464c;
+@define-color    button_bgcirc_b_hov                   #30363c;
+@define-color    button_bgcirc_c_hov                   #191f23;
 
 /* menus and menubars */
-@define-color    menu_bg                               #384248;
-@define-color    menu_bg_hover                         #aab1b3;
+@define-color    menu_bg                               @popover;
+@define-color    menu_bg_hover                         #4b5254;
 @define-color    menu_bdr                              #373b3d;
 @define-color    menu_arr                              #373b3d;
 @define-color    menu_arr_dis                          #282d2f;
@@ -233,8 +233,9 @@
 @define-color    menuitem_bg_hover                     @theme_accent_color;
 @define-color    menuitem_fg_dis                       #566164;
 @define-color    menuitem_separator                    #1b1f20;
+@define-color    headermenu_bg_hover                   #4b5254;
 
-@define-color    panel_bg                              #414747;
+@define-color    panel_bg                              #384248;
 @define-color    panel_bg_hov                          #515757;
 @define-color    panel_fg                              #f7f7f7;
 
@@ -244,22 +245,22 @@
 @define-color    scale_fill_b                          shade(@theme_selected_bg_color, 0.94);
 
 /* notebook */
-@define-color    notebook_bg                           #c8c9ca;
-@define-color    notebook_border                       #818283;
+@define-color    notebook_bg                           #3c464c;
+@define-color    notebook_border                       #212121;
 @define-color    notebook_border_sel                   @theme_accent_color;
-@define-color    notebook_border_hov                   #000;
-@define-color    notebook_bar                          #b1b2b3;
-@define-color    section_bg                            #c8c9ca;
+@define-color    notebook_border_hov                   #fff;
+@define-color    notebook_bar                          #2c383f;
+@define-color    section_bg                            #383e41;
 
 /* scrollbar */
-@define-color    scroll_bg                             #e0e0e0;
-@define-color    scroll_slider_bg                      #a0a0a0;
-@define-color    scroll_slider_bg_hover                #a9a9a9;
-@define-color    scroll_slider_bkdrp                   #999999;
+@define-color    scroll_bg                             #2b3032;
+@define-color    scroll_slider_bg                      #a3a6a5;
+@define-color    scroll_slider_bg_hover                #c9cac9;
+@define-color    scroll_slider_bkdrp                   #595d5f;
 
 /* treeview */
-@define-color    treeview_bg_a                         #f6f6f6;
-@define-color    treeview_bg_b                         #d8d8d8;
+@define-color    treeview_bg_a                         #263036;
+@define-color    treeview_bg_b                         #191f23;
 @define-color    treeview_fg                           @theme_fg_color;
 @define-color    treeview_fg_sel                       #f7f7f7;
 
@@ -268,14 +269,14 @@
 @define-color    label_fg_dis                          #566164;
 
 /* row */
-@define-color    row_bg                                #dcdcdc;
-@define-color    row_bg_hover                          #cccccc;
+@define-color    row_bg                                #202a2f;
+@define-color    row_bg_hover                          #232e33;
 @define-color    row_bg_active                         @theme_accent_color;
 @define-color    row_fg_dis                            #566164;
 
 /* hdyview */
-@define-color    hdybutton_bg_hov                      #d0d0d0;
-@define-color    hdybutton_bg_chk                      #d8d8d8;
+@define-color    hdybutton_bg_hov                      #384248;
+@define-color    hdybutton_bg_chk                      #3f4e57;
 @define-color    hdyheadbutton_bg_a                    #535c63;
 @define-color    hdyheadbutton_bg_b                    #494f53;
 @define-color    hdyheadbutton_bdr                     #63696c;
@@ -286,35 +287,35 @@
 @define-color    hdyheadbutton_chk_bdr_r               #42494c;
 
 /* base background color of insensitive widgets */
-@define-color    insensitive_bg_color                  #c2c6c6;
+@define-color    insensitive_bg_color                  #2d343a;
 
 /* text foreground color of insensitive widgets */
-@define-color    insensitive_fg_color                  #616464;
+@define-color    insensitive_fg_color                  #919494;
 
 /* insensitive text widgets and the like base background color */
-@define-color    insensitive_base_color                #c5c5c5;
+@define-color    insensitive_base_color                #2c3033;
 
 /* text color for entries, views and content in general on backdrop windows */
 @define-color    theme_unfocused_text_color            #ffffff;
 
 /* widget base background color on backdrop windows */
-@define-color    theme_unfocused_bg_color              #c5c5c5;
+@define-color    theme_unfocused_bg_color              #2c3033;
 
 /* text widgets and the like base background color on backdrop windows */
 @define-color    theme_unfocused_base_color            @theme_base_color;
 
 /* text/foreground color of selections on backdrop windows */
-@define-color    theme_unfocused_selected_fg_color     #000000;
+@define-color    theme_unfocused_selected_fg_color     #ffffff;
 
 /* insensitive color on backdrop windows*/
 @define-color    unfocused_insensitive_color           #566164;
 
 /* widgets main borders color */
-@define-color    borders                               #000000;
+@define-color    borders                               #1b1f20;
 
 /* widgets main borders color on backdrop windows */
-@define-color    border_normal                         #a9a9a9;
-@define-color    unfocused_borders                     #a9a9a9;
+@define-color    border_normal                         #3b4e5c;
+@define-color    unfocused_borders                     #202425;
 
 /* Cinnamon specific colours */
 @define-color    nemo_sidebar_fg                       #ffffff;
